<resources>
    <string name="app_name">Precared</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip_text">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login Now</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="name_text">Name</string>
    <string name="phone_text">Mobile Number</string>
    <string name="signUp_button_text">Sign Up</string>
    <string name="login_title">Login</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="help_text">Help</string>
    <string name="text_home">Home</string>
    <string name="text_settings">Settings</string>
    <string name="text_help">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_product_text">Start Selling</string>
    <string name="know_more_text">Know More</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="type_your_message_hint_text">Type your message here</string>
    <string name="refresh_text">Refresh</string>
    <string name="text_logout">Logout</string>
    <string name="rupees_symbol">\u20B9</string>
    <string name="title_activity_add_seller_product">AddSellerProduct</string>
    <string name="product_title">Product Title</string>
    <string name="product_details">Please enter product name</string>
    <string name="product_desc_text">Product Description</string>
    <string name="desc_hint_text">Please enter product description</string>
    <string name="known_defect_text">Known Defects</string>
    <string name="any_defect">Any defects</string>
    <string name="shipping_details">Pickup Address</string>
    <string name="address_text">Enter shipping address</string>
    <string name="upload_product_details">Upload Product Details</string>
    <string name="attach_file_text">Attach Photo</string>
    <string name="submit_text">Submit</string>
    <string name="product_list_text">Product List</string>
    <string name="email_empty_error">Please enter your email</string>
    <string name="invalid_email_error">invalid email</string>
    <string name="password_empty_error">Please enter password</string>
    <string name="confirm_password_empty_error">Password does not match</string>
    <string name="logout_title">Logout?</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="yes_text">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_seller">SellerActivity</string>
    <string name="start_selling_text">Start Selling</string>
    <string name="seller_text">Seller</string>
    <string name="text_chat">Lets Chat with admin</string>
    <string name="text_please_enter_product_name">Please enter product name</string>
    <string name="text_please_enter_product_desc">Please enter product description</string>
    <string name="no_internet_connection_text">Please check your internet connection</string>

    <string name="permission_denied">Permission Denied!</string>
    <string name="permission_denied_albums">Allow access to photos, media and files on your device to view albums</string>
    <string name="permission_denied_images">Allow access to photos, media and files on your device to view images</string>
    <string name="attachments_text">Attachments</string>
    <string name="album_view">Album View</string>
    <string name="add">ADD</string>
    <string name="image_view">Tap to select Imageview</string>
    <string name="selected">Selected</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="sign_in_text">Sign In</string>
    <string name="gcm_defaultSenderId">12142512</string>
    <string name="name_empty_error">Please enter name</string>
    <string name="phone_numer_error">Please enter mobile number</string>
    <string name="text_refer_and_earn">Refer a Friend</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="referral_code_text">Refferal Code</string>
    <string name="product_text">" Product"</string>
    <string name="line1_text">Line1</string>
    <string name="line2_text">Line2</string>
    <string name="city_text">City</string>
    <string name="state_text">State</string>
    <string name="pincode_text">Pincode</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="statusNotification">Seller Status</string>
    <string name="queryReponse">Query Reponse</string>
    <string name="text_notification">Notification</string>
    <string name="edit_accounts">Edit Account</string>
    <string name="my_accounts_text">My Account</string>
    <string name="first_name">First Name</string>
    <string name="lastName_text">Last Name</string>
    <string name="update_text">Update</string>
    <string name="lastName_empty_error">Last Name are not empty</string>
    <string name="New_text">New</string>
    <string name="accept_text">Accept</string>
    <string name="picup_schedule_text">Pickup Schedule</string>
    <string name="product_received_text">Product Received</string>
    <string name="ready_text">Ready</string>
    <string name="live_text">Live</string>
    <string name="book_text">Booked</string>
    <string name="sold_text">Sold</string>
    <string name="paid_text">Paid</string>
    <string name="on_hold_text">On hold</string>
    <string name="mobile_error">mobile number is empty</string>
    <string name="address_one_error">line 1 is empty</string>
    <string name="my_address_text">My Addresses</string>
    <string name="check_icon">&#xf00c;</string>
</resources>
