<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_bg"
    android:id="@+id/mainWrapper"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/layout_toolbar" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_bg"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    app:cardBackgroundColor="@color/default_card_bg"
                    app:cardCornerRadius="@dimen/card_radius"
                    app:cardElevation="@dimen/card_elevation"
                    app:contentPadding="@dimen/card_padding"
                    android:fitsSystemWindows="true">

                    <LinearLayout
                        android:id="@+id/orderLayoutInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardLayoutTwo"
                        android:background="#FDFFFFFF"
                        android:orientation="vertical"
                        android:fitsSystemWindows="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/padding_normal"
                            android:paddingRight="@dimen/padding_normal"
                            android:paddingTop="@dimen/padding_normal"
                            android:text="@string/upload_product_details"
                            android:layout_gravity="center"
                            android:textColor="@color/primary"
                            android:padding="@dimen/padding_normal"
                            android:textSize="@dimen/text_size_xlarge" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/padding_normal"
                            android:paddingRight="@dimen/padding_normal"
                            android:paddingTop="@dimen/padding_normal"
                            android:text="@string/product_title"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_large"
                            android:layout_marginTop="@dimen/margin_normal"/>

                        <EditText
                            android:id="@+id/edtProductName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/product_details"
                            android:padding="@dimen/padding_normal"
                            android:textColorHint="@color/secondary_text"
                            android:textSize="@dimen/text_size_normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray_bg" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:background="@null"
                            android:paddingLeft="@dimen/padding_normal"
                            android:paddingRight="@dimen/padding_normal"
                            android:paddingTop="@dimen/padding_normal"
                            android:text="@string/product_desc_text"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_large" />

                        <EditText
                            android:id="@+id/edtProductDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/desc_hint_text"
                            android:padding="@dimen/padding_normal"
                            android:textColorHint="@color/secondary_text"
                            android:textSize="@dimen/text_size_normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray_bg" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:paddingLeft="@dimen/padding_normal"
                            android:paddingRight="@dimen/padding_normal"
                            android:paddingTop="@dimen/padding_normal"
                            android:text="@string/known_defect_text"
                            android:textColor="@color/primary_text"
                            android:textSize="@dimen/text_size_large" />

                        <EditText
                            android:id="@+id/edtProductDefects"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/any_defect"
                            android:padding="@dimen/padding_normal"
                            android:textColorHint="@color/secondary_text"
                            android:textSize="@dimen/text_size_normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray_bg" />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/padding_normal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:text="@string/shipping_details"
                                android:textColor="@color/primary_text"
                                android:layout_alignParentLeft="true"
                                android:textStyle="bold"
                                android:textSize="@dimen/text_size_large" />

                            <TextView
                                android:id="@+id/addAdreessText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_small"
                                android:text="Add New Address"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold"
                                android:layout_alignParentRight="true"
                                android:textSize="@dimen/text_size_large" />

                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/addressRecyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </android.support.v7.widget.RecyclerView>

                        <TableRow
                            android:id="@+id/attachmentLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/margin_small"
                            android:gravity="end|center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:gravity="end"
                                android:padding="@dimen/padding_small"
                                android:src="@drawable/ic_attachments"
                                android:tint="@color/colorAccent" />

                            <TextView
                                android:id="@+id/attachTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="@dimen/padding_small"
                                android:paddingEnd="@dimen/padding_small"
                                android:paddingRight="@dimen/padding_small"
                                android:paddingTop="@dimen/padding_small"
                                android:text="@string/attach_file_text"
                                android:textColor="@color/colorAccent" />
                        </TableRow>
                        <HorizontalScrollView
                            android:id="@+id/horizontalScrollView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/bottomLayout">

                            <LinearLayout
                                android:id="@+id/selectedImageLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" />

                        </HorizontalScrollView>
                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="@drawable/button"
                    android:elevation="4dp"
                    android:text="@string/submit_text"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>



</RelativeLayout>

