<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/mainLayoutWrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_large">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:elevation="@dimen/card_elevation"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:contentPadding="@dimen/card_padding"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="@dimen/text_size_normal" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName_text"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:textSize="@dimen/text_size_normal" />

            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_text"
                        android:inputType="textPassword|textNoSuggestions"
                        android:paddingRight="30dp"
                        android:singleLine="true"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/text_white"
                        android:textSize="@dimen/text_size_normal" />
                </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/curved_button"
                android:elevation="@dimen/card_elevation"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_xxlarge"
                android:paddingRight="@dimen/padding_xxlarge"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/update_text"
                android:layout_margin="@dimen/margin_large"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
        </RelativeLayout>
</RelativeLayout>
